# gestao_de_apoio_arquivistico

./: .env.example  .env.homolog.example  .env.oci.example  .gitignore  DEPLOY_HOMOLOG.sh  DEPLOY_HOMOLOG_CHECKLIST.md  DEPLOY_HOMOLOG_MANUAL.md  DEPLOY_HOMOLOG_QUICK_START.md  DEPLOY_HOMOLOG_README.md  DEPLOY_HOMOLOG_VALIDACAO_FINAL.md  EXECUTE_AGORA.md  INDICE_DEPLOY_HOMOLOG.md  Makefile  README.md  deploy_homolog_auto.ps1  deploy_homolog_execute.sh  deploy_homolog_via_ssh.ps1  docker-compose.homolog.yml  docker-compose.oci.yml  docker-compose.yml  openapi_runtime.json
backend/: Dockerfile  README.md  alembic.ini  celerybeat-schedule  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_entrevista_cliente_fields.py
backend/app/: __init__.py  config.py  database.py  main.py  tasks.py
backend/app/middlewares/: observability.py  rate_limit.py  security_headers.py
backend/app/models/: __init__.py  ciclo_vida.py  conhecimento.py  dados_migracao.py  governanca.py  integracao.py  pcd.py  roteiro.py  ttd.py  user.py
backend/app/routers/: __init__.py  admin.py  auth.py  ciclo_vida.py  conhecimento.py  dados_migracao.py  governanca.py  health.py  integracao.py  pcd.py  portal.py  relatorios.py  roteiros.py  ttd.py
backend/app/services/: antivirus.py  assistente_entrevista.py  backup.py  condicional.py  conhecimento.py  data_quality.py  lgpd.py  mapeamento.py  (+2 more)
backend/tests/: test_auth_api.py  test_condicional.py  test_modulos_api.py  test_portal_api.py  test_relatorios_api.py  test_roteiros_api.py
(+109 files in other folders)
